--- a/shop/templates/orders/order-complete.html
+++ b/shop/templates/orders/order-complete.html
@@ -3,7 +3,7 @@
 Thank you
 {% endblock %}
 {% block content %}
-<h1>Thank you</h1>
-<p>Your order has been successfully completed. Your order number is
-<strong>{{ order.id }}</strong>.</p>
+<h1>Спасибо за заказ</h1>
+<p>Ваш заказ успешно оформлен.
+<strong>Номер заказа {{ order.id }} </strong>.</p>
 {% endblock %}
